fix: scrollbar

--- a/src/components/BasicLayout/index.less
+++ b/src/components/BasicLayout/index.less
@@ -9,6 +9,25 @@
     flex-direction: column;
     overflow: auto;
     position: relative;
+
+    &::-webkit-scrollbar {
+      width : 10px;
+      height: 1px;
+    }
+
+    &:hover::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
+      background   : gray;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background   : #ededed;
+    }
   }
 
   .charts {
